--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.6",
     "crypto-js": "^4.2.0",
+    "js-md5": "^0.8.3",
+    "jsrsasign": "^11.1.0",
     "md5": "^2.3.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
